# guiliarubini

./: Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml
backend/: .gitignore  Makefile  models.py  pyproject.toml
frontend/: Makefile  index.html  package-lock.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: MainContent.tsx
frontend/src/pages/sections/: CertificationsSection.tsx  EducationSection.tsx  ExperienceSection.tsx  LanguagesSection.tsx  ProjectsSection.tsx
src/: App.tsx  index.css
src/components/: AboutMe.tsx  Contacts.tsx  Impressum.tsx  IntroScreen.tsx  ProjectsSection.tsx  Sidebar.tsx
src/components/projectData/: fashionShowData.ts  newYorkerData.ts  specialFashionCollectionData.ts
src/pages/: MainContent.tsx
src/pages/sections/: AnimatedSection.tsx  ExperienceSection.tsx  ProjectsSection.tsx  SkillsSection.tsx
